--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -4,13 +4,13 @@ See https://github.com/LLK/scratch-paint/issues/13 */
 
 $ui-pane-border: var(--paint-ui-pane-border, #D9D9D9);
 $ui-pane-gray: #F9F9F9;
-$ui-background-blue: #e8edf1;
+$ui-background-blue: #f1ece8;
 
-$text-primary: var(--paint-text-primary, #575e75);
+$text-primary: var(--paint-text-primary, #726056);
 
-$motion-primary: hsla(194, 100%, 50%);
+$motion-primary: hsla(32.94deg, 100%, 50%);
 $motion-tertiary: #007da3;
-$motion-transparent: hsla(194, 100%, 50%, 0.35);
+$motion-transparent: hsla(32.94deg, 100%, 50%, 0.35);
 
 $red-primary: #FF661A;
 $red-tertiary: #E64D00;
