--- a/src/components/color-picker/color-picker.css
+++ b/src/components/color-picker/color-picker.css
@@ -87,8 +87,8 @@ body :global(.Popover) {
 }
 
 .active-swatch {
-    border: 1px solid #00c3ff;
-    box-shadow: 0px 0px 0px 3px hsla(194, 100%, 50%, 0.2);
+    border: 1px solid #ff8c00;
+    box-shadow: 0px 0px 0px 3px hsla(32.94deg, 100%, 50%, 0.2);
 }
 
 .swatch-icon {
