--- a/src/components/paint-editor/paint-editor.css
+++ b/src/components/paint-editor/paint-editor.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     padding: calc(3 * $grid-unit);
+    box-sizing: border-box;
 }
 [theme="dark"] .editor-container {
     color-scheme: dark;
