--- a/src/playground/playground.css
+++ b/src/playground/playground.css
@@ -9,8 +9,8 @@ body, html, .wrapper {
 }
 
 .playgroundContainer{
-	height: 90%;
-	width: 90%;
+	height: 100%;
+	width: 100%;
 	margin: auto;
 }
 
@@ -20,4 +20,5 @@ body, html, .wrapper {
 
 .playgroundButton {
 	margin: 4px;
+	display: none;
 }
