--- a/src/containers/paper-canvas.css
+++ b/src/containers/paper-canvas.css
@@ -5,7 +5,7 @@
     height: calc(100% - 2px);
     margin: auto;
     position: absolute;
-    background-color: #D9E3F2;
+    background-color: #EFE2D7;
 }
 [data-paint-theme="dark"] .paper-canvas {
     background-color: #222;
